--- a/index.html
+++ b/index.html
@@ -3,18 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>skillful-compass</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Mentor4All</title>
+    <meta
+      name="description"
+      content="Find expert mentors to guide you in business, entrepreneurship, career growth, and social impact. Book 1-on-1 or group mentorship sessions with industry leaders."
+    />
+    <meta name="author" content="Mentor4All Team" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta
+      property="og:title"
+      content="Mentor4All - Expert Mentorship for Your Growth"
+    />
+    <meta
+      property="og:description"
+      content="Connect with experienced mentors in business, career development, and social impact. Gain insights, book sessions, and accelerate your journey with Mentor4All."
+    />
+
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
